Fix growing calculator when display too big

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     border-radius: 20px;
     border: 2px solid #1b5157;
     box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    width: 400px;
 }
 
 .display {
@@ -47,6 +48,8 @@ body {
 
 .display .result {
     font-size: 40px;
+    overflow-x: scroll;
+
 }
 
 .keyboard {
